{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 22,
  "lineage": "6f081768-54f8-254e-0f9c-e50ffb7b99c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "payment_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:431328063230:internet-gateway/igw-0f756c681c486afe3",
            "id": "igw-0f756c681c486afe3",
            "owner_id": "431328063230",
            "tags": {
              "Name": "Dev-IGW-Payment"
            },
            "tags_all": {
              "Name": "Dev-IGW-Payment"
            },
            "vpc_id": "vpc-07049a742aa35ae09"
          },
          "dependencies": [
            "aws_vpc.payment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f756c681c486afe3",
            "id": "r-rtb-085bf12fcf6ceda9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085bf12fcf6ceda9f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.payment_ig",
            "aws_route_table.payment-rt",
            "aws_vpc.payment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "payment-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:431328063230:route-table/rtb-085bf12fcf6ceda9f",
            "id": "rtb-085bf12fcf6ceda9f",
            "owner_id": "431328063230",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f756c681c486afe3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "payment-rt"
            },
            "tags_all": {
              "Name": "payment-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07049a742aa35ae09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.payment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "payment-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1bf0c34154a3389",
            "route_table_id": "rtb-085bf12fcf6ceda9f",
            "subnet_id": "subnet-09e7144181cab1e38"
          },
          "dependencies": [
            "aws_route_table.payment-rt",
            "aws_subnet.payment_subnet",
            "aws_vpc.payment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "payment_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:431328063230:subnet/subnet-09e7144181cab1e38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e7144181cab1e38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431328063230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            },
            "vpc_id": "vpc-07049a742aa35ae09"
          },
          "dependencies": [
            "aws_vpc.payment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "payment_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:431328063230:vpc/vpc-07049a742aa35ae09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b150f5740ecc1b1b",
            "default_route_table_id": "rtb-034388671e0794599",
            "default_security_group_id": "sg-0b36101ea718d67e6",
            "dhcp_options_id": "dopt-0525137a09aa9c35a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07049a742aa35ae09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034388671e0794599",
            "owner_id": "431328063230",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            }
          }
        }
      ]
    }
  ]
}